fixed link wrap

--- a/src/Note/note.css
+++ b/src/Note/note.css
@@ -8,6 +8,10 @@
   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
 
+.note a {
+  word-wrap: break-word;
+}
+
 .note:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
